--- a/src/main/webapp/secured/user/menu.xhtml
+++ b/src/main/webapp/secured/user/menu.xhtml
@@ -4,55 +4,60 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet library="css" name="jsfcrud.css"/>
+        <h:outputScript library="js" name="jsfcrud.js"/>
+        <h:outputScript name="bootstrap/js/bootstrap.js" />
+        <h:outputScript name="bootstrap/js/bootstrap.min.js"/>
+        <h:outputStylesheet name="bootstrap/css/bootstrap.css"/>
     </h:head>
-    <h:body>
-        <h1> BIENVENIDO #{login.usuario}</h1>
+    <h:body style="background-color: #ECECEC">
+        <br></br>
+        <br></br>
+        <center style="background-color:#F6F6F6 ; color: black"><h1> ¡Bienvenido! #{login.usuario}</h1></center>
+        <br></br>
         <h:form>
-            <h:commandButton action="#{login.logout()}" value="LOGOUT"></h:commandButton>
-            <br />
-            <h:link outcome="/Paginas/cargo/List" value="Show All Cargo Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/categoria/List" value="Show All Categoria Items" rendered="#{login.rolInventario}"/>
-        <br />
-        <h:link outcome="/Paginas/cliente/List" value="Show All Cliente Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/compradetalle/List" value="Show All Compradetalle Items" rendered="#{login.rolCompras}"/>
-        <br />
-        <h:link outcome="/Paginas/empleado/List" value="Show All Empleado Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/facturacompra/List" value="Show All Facturacompra Items" rendered="#{login.rolCompras}" />
-        <br />
-        <h:link outcome="/Paginas/facturaventa/List" value="Show All Facturaventa Items" rendered="#{login.rolVentas}"/>
-        <br />
-        <h:link outcome="/Paginas/ganancia/List" value="Show All Ganancia Items" rendered="#{login.rolAdmin}"/>
-        <br />
-        <h:link outcome="/Paginas/historialtrabajo/List" value="Show All Historialtrabajo Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/ordencompra/List" value="Show All Ordencompra Items" rendered="#{login.rolCompras}"/>
-        <br />
-        <h:link outcome="/Paginas/ordenventa/List" value="Show All Ordenventa Items" rendered="#{login.rolVentas}"/>
-        <br />
-        <h:link outcome="/Paginas/pagocompra/List" value="Show All Pagocompra Items" rendered="#{login.rolCompras}"/>
-        <br />
-        <h:link outcome="/Paginas/pagoventa/List" value="Show All Pagoventa Items" rendered="#{login.rolVentas}"/>
-        <br />
-        <h:link outcome="/Paginas/persona/List" value="Show All Persona Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/producto/List" value="Show All Producto Items" rendered="#{login.rolInventario}"/>
-        <br />
-        <h:link outcome="/Paginas/proveedor/List" value="Show All Proveedor Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/rol/List" value="Show All Rol Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/tarjetacreditocompra/List" value="Show All Tarjetacreditocompra Items" rendered="#{login.rolCompras}"/>
-        <br />
-        <h:link outcome="/Paginas/tarjetacreditoventa/List" value="Show All Tarjetacreditoventa Items" rendered="#{login.rolVentas}"/>
-        <br />
-        <h:link outcome="/Paginas/usuario/List" value="Show All Usuario Items" rendered="#{login.rolRh}"/>
-        <br />
-        <h:link outcome="/Paginas/usuariosw/List" value="Show All Usuariosw Items" rendered="#{login.rolAdmin}"/>
-        <br />
-        <h:link outcome="/Paginas/ventadetalle/List" value="Show All Ventadetalle Items" rendered="#{login.rolVentas}"/>
+            
+            <h:commandButton class="btn btn-sm btn-block btn-outline-dark" action="#{login.logout()}" value="Cerrar Sesión"></h:commandButton>
+
+            <br></br>
+            <h5 align="center">Modulos</h5>
+            <table class="table">
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/cargo/List" value="Cargo" rendered="#{login.rolRh}"/></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/categoria/List" value="Categorias" rendered="#{login.rolInventario}"/></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/cliente/List" value="Clientes" rendered="#{login.rolRh}"/></td>
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/compradetalle/List" value="Detalle de Compras" rendered="#{login.rolCompras}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/empleado/List" value="Empleados" rendered="#{login.rolRh}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/facturacompra/List" value="Factura Compras" rendered="#{login.rolCompras}" /></td>
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/facturaventa/List" value="Factura Ventas" rendered="#{login.rolVentas}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/historialtrabajo/List" value="Historial" rendered="#{login.rolRh}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/ordencompra/List" value="Orden Compras" rendered="#{login.rolCompras}" /></td> 
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/ordenventa/List" value="Orden Venta" rendered="#{login.rolVentas}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/pagocompra/List" value="Pago Compras" rendered="#{login.rolCompras}"/></td> 
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/pagoventa/List" value="Pago Ventas" rendered="#{login.rolVentas}" /></td> 
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/persona/List" value="Personas" rendered="#{login.rolRh}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/producto/List" value="Productos" rendered="#{login.rolInventario}"/></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/proveedor/List" value="Proveedores" rendered="#{login.rolRh}" /></td>
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/rol/List" value="Roles" rendered="#{login.rolRh}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/tarjetacreditocompra/List" value="Tajetas Compra" rendered="#{login.rolCompras}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/tarjetacreditoventa/List" value="Tarjetas Venta" rendered="#{login.rolVentas}" /></td>
+                </tr>
+                <tr>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/usuario/List" value="Usuarios" rendered="#{login.rolRh}" /></td>
+                    <td align="center"><h:link class="btn btn-lg btn-block btn-info" outcome="/Paginas/ventadetalle/List" value="Detalle Ventas" rendered="#{login.rolVentas}" /></td>
+                    <td align="center"></td>
+                </tr>
+            </table>
         </h:form>
     </h:body>
 </html>
