--- a/src/main/webapp/Paginas/facturaventa/List.xhtml
+++ b/src/main/webapp/Paginas/facturaventa/List.xhtml
@@ -75,6 +75,20 @@
                         </f:facet>
                     </p:dataTable>
                     <br></br>
+                    <center>
+                        <h:panelGrid columns="2">
+                            <p:panel header="Reportes" style="">
+                                <h:commandLink>
+                                    <p:graphicImage value ="../../resources/images/excel.png" width="50"/>
+                                    <p:dataExporter type="csv" target="datalist" fileName="Reporte facturas de venta"/>
+                                </h:commandLink>
+                                <h:commandLink>
+                                    <p:graphicImage value ="../../resources/images/pdf.png" width="50"/>
+                                    <p:dataExporter  type="pdf" target="datalist" fileName="Reporte facturas de venta"/>
+                                </h:commandLink>
+                            </p:panel>
+                        </h:panelGrid>
+                    </center>
                 </p:panel>
             </h:form>
 
