--- a/src/main/webapp/secured/admin/menu.xhtml
+++ b/src/main/webapp/secured/admin/menu.xhtml
@@ -10,6 +10,7 @@
         <h:outputScript name="bootstrap/js/bootstrap.js" />
         <h:outputScript name="bootstrap/js/bootstrap.min.js"/>
         <h:outputStylesheet name="bootstrap/css/bootstrap.css"/>
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://apis.google.com"></meta>
     </h:head>
     <h:body style="background-color: #ECECEC">
         <br></br>
